Stretch object created
Stretch: tramo.
This will store all the information from the JSON file.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Proyecto2Analisis)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Proyecto2Analisis main.cpp)
+add_executable(Proyecto2Analisis main.cpp headers/Stretch.h sources/Stretch.cpp)
